# WOLT

./: .dockerignore  .env.example  .env.web.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  compose.host-agent.yml  compose.release.yml  compose.web.yml  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  config.py  fortigate.py  listener.py  logging_config.py  main.py  parser.py  rate_limit.py
app/application/: __init__.py  auth_service.py  engine_runtime.py  identity_service.py  observability_service.py  operations_service.py
app/domain/: __init__.py
app/drivers/: __init__.py  base.py  fortigate_ssh.py  registry.py
app/infrastructure/: __init__.py  email.py  host_agent.py
app/web/: __init__.py  __main__.py  application.py  auth_routes.py  config.py  host_routes.py  identity_routes.py  (+2 more)
config/: interfaces.example.yaml
host_agent/: __init__.py  server.py
migrations/: env.py
scripts/: init-web-env.sh  install-cosign.sh  install-host-agent.sh  upgrade-web-env.sh
tests/: test_auth_integration.py  test_auth_security.py  test_command_builder.py  test_config.py  test_credentials_crypto.py  test_database_models.py  test_email_delivery.py  test_fortigate_driver.py  test_host_agent.py  test_init_web_env.py  test_observability_security.py  test_parser.py  test_rate_limit.py  test_release_installer.py  test_web_api.py  test_web_config.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+46 files in other folders)
