[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wolt"
version = "0.1.0"
description = "Wake-on-LAN Translator for FortiGate"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0,<7", "paramiko>=3.4,<5"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = "/tmp/wolt-pytest-cache"
