[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wolt"
version = "1.1.2"
description = "Wake-on-LAN Translator for FortiGate"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0,<7",
    "paramiko>=3.4,<5",
    "alembic>=1.16,<2",
    "argon2-cffi>=23.1,<26",
    "email-validator>=2.2,<3",
    "cryptography>=44,<50",
    "fastapi>=0.115,<1",
    "psycopg[binary]>=3.2,<4",
    "SQLAlchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = "/tmp/wolt-pytest-cache"
